# geneweaver-boolean-algebra

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: _check-coverage-action.yml  _format-lint-action.yml  _run-tests-action.yml  coverage.yml  publish-to-pypi.yml  release.yml  run-tests.yml  style.yml  tests.yml
src/geneweaver/tools/boolean_algebra/: __init__.py  intersection.py  plugin.py  schema.py  symmetric_difference.py  tool.py  union.py  utils.py
tests/: __init__.py
tests/unit/: __init__.py  conftest.py  const.py  test_boolean_algebra_tool.py  test_gene_value.py  test_plugin.py  test_symmetric_difference.py  test_union.py
tests/unit/intersection/: __init__.py  test_combination_intersection.py  test_intersection.py
tests/unit/utils/: __init__.py  test_iterable_to_sets.py
