[tool.poetry]
name = "geneweaver-boolean-algebra"
version = "0.3.0a1"
description = "Geneweaver's Boolean Algebra Tool"
authors = ["Alexander Berger <alexander.berger@jax.org>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://bergsalex.github.io/geneweaver-docs/"
repository = "https://github.com/bergsalex/geneweaver-boolean-algebra"
packages = [{include = "geneweaver/tools/boolean_algebra", from = "src"}]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
geneweaver-core = "^0.9.1"
geneweaver-tools = "^0.0.3"
jupyter = "^1.0.0"
scipy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
geneweaver-testing = "^0.0.2b2"
notebook = "^6.5.4"

[tool.poetry.plugins."jax.ats.plugins"]
"boolean_algebra" = "geneweaver.tools.boolean_algebra.plugin:BooleanAlgebra"

[tool.ruff]
select = ['F', 'E', 'W', 'A', 'C90', 'N', 'B', 'ANN', 'D', 'I', 'ERA', 'PD', 'NPY', 'PT']

[tool.ruff.per-file-ignores]
"tests/*" = ["ANN001", "ANN201"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
